# FrequencyAnalysis

./: .gitignore  CMakeLists.txt  FFTShift.cxx  FrequencyAnalysis.cxx  FrequencyAnalysis.xml  LICENSE  ParseMTF.cxx  README.md  RecistROI.cxx  SignalNoise.cxx  SignalNoise.h  call.txt  main.cxx  make_call.sh
call/: PhantomAnalysisPoints.csv  array.job  call.txt  frequency_analysis.o5688388  joblog.txt  make_call.py  make_call.sh  paths.csv  paths_ir_1024.csv  runTop.job
call/.qbatch/: call.txt.array
call/call_3-7/: FrequencyAnalysis.80s-89915,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-89917,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-89920,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-89923,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-89933,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-90738,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-90741,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-90750,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-90760,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-90763,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-92166,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-92169,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-92182,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-92187,argon-itf-bx47-36.hpc.btr  FrequencyAnalysis.80s-92203,argon-itf-bx47-36.hpc.btr  call.txt  run.job
call/call_3-7/logs/: FrequencyAnalysis.1.err  FrequencyAnalysis.1.out  FrequencyAnalysis.10.err  FrequencyAnalysis.10.out  FrequencyAnalysis.11.err  FrequencyAnalysis.11.out  FrequencyAnalysis.12.err  FrequencyAnalysis.12.out  FrequencyAnalysis.13.err  FrequencyAnalysis.13.out  FrequencyAnalysis.14.err  FrequencyAnalysis.14.out  FrequencyAnalysis.15.err  FrequencyAnalysis.15.out  FrequencyAnalysis.2.err  FrequencyAnalysis.2.out  FrequencyAnalysis.3.err  FrequencyAnalysis.3.out  FrequencyAnalysis.4.err  FrequencyAnalysis.4.out  FrequencyAnalysis.5.err  FrequencyAnalysis.5.out  FrequencyAnalysis.6.err  FrequencyAnalysis.6.out  FrequencyAnalysis.7.err  FrequencyAnalysis.7.out  FrequencyAnalysis.8.err  FrequencyAnalysis.8.out  FrequencyAnalysis.9.err  FrequencyAnalysis.9.out
call/test/: call.txt  make_call.sh  run.sh
data/: PASS.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_200/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_200_IR3/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_200_IR3_resampled/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_200_resampled/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_250/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_250_IR3/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_250_IR3_resampled/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_250_resampled/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_300/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_300_IR3/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_300_IR3_resampled/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_300_resampled/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_350/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_350_IR3/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_350_IR3_resampled/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_350_resampled/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_400/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_400_IR3/: stats.csv
data/data_3_11/airway1/0.1_0.2/1024_DFOV_400_IR3_resampled/: stats.csv
data/data_3_11/airway1/0.1_0.2/512_DFOV_200/: stats.csv
hooks/: pre-commit
plotting/: plot.ipynb  plotSNR.ipynb  visualize_cutoffs.ipynb
preprocessing/: convertDCM.sh  resampleTo500.sh
scripts/: setup-hooks.sh
src/: BandPassFilter.cxx  BandPassFilter.h  FFTCompatable.cxx  FFTCompatable.h  FFTShift.cxx  FFTShift.h  GetSlice.cxx  GetSlice.h  HannWindow.cxx  HannWindow.h  ImageEnergy.cxx  ImageEnergy.h  ImageTypes.h  LowPassFilter.cxx  LowPassFilter.h  ParseMTF.cxx  ParseMTF.h  RecistROI.cxx  RecistROI.h  cropImage.ipynb  main.cxx
tests/: CMakeLists.txt  test_FFTShift.cxx  test_HannWindow.cxx
(+11822 files in other folders)
